[package]
authors = ["rmsthebest <11652273+rmsthebest@users.noreply.github.com>"]
categories = ["command-line-utilities"]
description = "Command line utility that calculates nullable first follow sets. Can also be used as a library"
documentation = "docs.rs/nff"
license = "GPL-3.0"
name = "nff"
repository = "https://github.com/rmsthebest/nullable-first-follow"
keywords = ["nullable", "first", "follow", "nff"]
version = "0.1.0"

[dependencies]
